build fix + config changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
             "required": {
                 "every": [ "id" ]
             }
-        }]
+        }],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
