--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "babel-polyfill": "6.23.0",
     "chalk": "^1.1.3",
     "compression": "1.6.2",
+    "containers": "0.0.1",
     "cross-env": "5.0.0",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
